--- a/templates/team.html
+++ b/templates/team.html
@@ -97,7 +97,9 @@
 						<p class="name">{{ member.name }}{% if member.role is not none %} for {{ member.role }}{% endif %}</p>
 					{% endfor %}
 					<p class="name">Everyone that has ever contributed</p>
-					<p class="name">And VALVe</p>
+					<p class="name">VALVe Software</p>
+					<p class="name">Github Inc</p>
+					<p class="name">RamnNode LLC</p>
                     </div>
                     {% if showlink %}
                     <a href="{{ url_for('team_credits') }}">As credits.txt file</a>
